--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "redux": "^4.0.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
+  },
+  "engines": {
+    "node": "12.5.0",
+    "npm": "6.9.0"
+  },
+  "scripts": {
+    "postinstall": "webpack"
   }
 }
