--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "webpack-cli": "^3.3.10"
   },
   "engines": {
-    "node": "12.5.0",
-    "npm": "6.9.0"
+    "node": "10.13.0",
+    "npm": "6.4.1"
   },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack --watch --mode=development",
     "postinstall": "webpack"
   }
 }
